O3-2016 Fix overlapping radio and checkbox text

--- a/src/ohri-form.scss
+++ b/src/ohri-form.scss
@@ -19,6 +19,7 @@
 
 .ohriFormContainer :global(.cds--label) {
   font-size: 0.875rem;
+  width: 18rem;
 }
 
 .formContent {
